[package]
name = "text-adventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.9"
fstream = "0.1.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"

